--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/15/2020 03:09:00 PM</p>
+    <p class="lastupdate">09/15/2020 03:14:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,23 +50,23 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">88.3&#176;F</td>
+        <td class="data">88.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">88.3&#176;F</td>
+        <td class="data">88.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">88.3&#176;F</td>
+        <td class="data">88.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">42.1&#176;F</td>
+        <td class="data">40.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">20%</td>
+        <td class="data">19%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
@@ -74,7 +74,7 @@
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">11 mph S (180&#176;)</td>
+        <td class="data">8 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">78.1&#176;F</td>
+        <td class="data">78.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="10:03:01 AM">
             30.054</span><br/>
-          <span title="03:01:02 PM">
-            29.968</span>
+          <span title="03:09:02 PM">
+            29.966</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="10:03:01 AM (Tuesday)">
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:08:02 PM">
-            78.1</span><br/>
+          <span title="03:12:02 PM">
+            78.2</span><br/>
           <span title="07:48:01 AM">
             73.3</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">100%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">14 days, 0 hours, 22 minutes</td>
+      <td class="data">14 days, 0 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">14 days, 0 hours, 22 minutes</td>
+      <td class="data">14 days, 0 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
