--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/15/2020 03:29:00 PM</p>
+    <p class="lastupdate">09/15/2020 03:34:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">87.9&#176;F</td>
+        <td class="data">88.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">87.9&#176;F</td>
+        <td class="data">88.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">87.9&#176;F</td>
+        <td class="data">88.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">37.6&#176;F</td>
+        <td class="data">36.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">17%</td>
+        <td class="data">16%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.964 inHg (-0.055)</td>
+        <td class="data">29.966 inHg (-0.050)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">9 mph SW (225&#176;)</td>
+        <td class="data">9 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -237,8 +237,8 @@
         <td class="data new_row hilo_day">
           <span title="12:39:49 PM">
             50.5</span><br/>
-          <span title="03:28:06 PM">
-            37.6</span>
+          <span title="03:32:30 PM">
+            36.3</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="11:14:17 AM (Monday)">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="06:43:47 AM">
             79</span><br/>
-          <span title="01:46:35 PM">
-            17</span>
+          <span title="03:32:30 PM">
+            16</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:40:53 AM (Monday)">
@@ -444,7 +444,7 @@
         </td>
         <td class="data new_row hilo_week">
           2<br/>
-          194
+          195
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:26:02 PM">
-            78.5</span><br/>
+          <span title="03:31:02 PM">
+            78.6</span><br/>
           <span title="07:48:01 AM">
             73.3</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">14 days, 0 hours, 42 minutes</td>
+      <td class="data">14 days, 0 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">14 days, 0 hours, 42 minutes</td>
+      <td class="data">14 days, 0 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
