--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/15/2020 03:44:00 PM</p>
+    <p class="lastupdate">09/15/2020 03:49:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">88.2&#176;F</td>
+        <td class="data">87.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">88.2&#176;F</td>
+        <td class="data">87.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">88.2&#176;F</td>
+        <td class="data">87.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">34.7&#176;F</td>
+        <td class="data">34.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.963 inHg (-0.046)</td>
+        <td class="data">29.964 inHg (-0.044)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">10 mph S (180&#176;)</td>
+        <td class="data">8 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">78.8&#176;F</td>
+        <td class="data">79.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -237,8 +237,8 @@
         <td class="data new_row hilo_day">
           <span title="12:39:49 PM">
             50.5</span><br/>
-          <span title="03:40:12 PM">
-            34.7</span>
+          <span title="03:47:04 PM">
+            34.1</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="11:14:17 AM (Monday)">
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:40:02 PM">
-            78.8</span><br/>
+          <span title="03:47:02 PM">
+            79.0</span><br/>
           <span title="07:48:01 AM">
             73.3</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">14 days, 0 hours, 57 minutes</td>
+      <td class="data">14 days, 1 hour, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">14 days, 0 hours, 57 minutes</td>
+      <td class="data">14 days, 1 hour, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
