--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/15/2020 03:59:00 PM</p>
+    <p class="lastupdate">09/15/2020 04:04:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">87.2&#176;F</td>
+        <td class="data">87.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">87.2&#176;F</td>
+        <td class="data">87.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">87.2&#176;F</td>
+        <td class="data">87.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">32.2&#176;F</td>
+        <td class="data">32.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.964 inHg (-0.054)</td>
+        <td class="data">29.960 inHg (-0.046)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">9 mph SW (225&#176;)</td>
+        <td class="data">7 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">79.4&#176;F</td>
+        <td class="data">79.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:58:02 PM">
-            79.4</span><br/>
+          <span title="04:03:02 PM">
+            79.6</span><br/>
           <span title="07:48:01 AM">
             73.3</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">14 days, 1 hour, 12 minutes</td>
+      <td class="data">14 days, 1 hour, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">14 days, 1 hour, 12 minutes</td>
+      <td class="data">14 days, 1 hour, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
