--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/15/2020 04:09:00 PM</p>
+    <p class="lastupdate">09/15/2020 04:14:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -62,19 +62,19 @@
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">32.7&#176;F</td>
+        <td class="data">30.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">14%</td>
+        <td class="data">13%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.964 inHg (-0.041)</td>
+        <td class="data">29.963 inHg (-0.041)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">7 mph SSW (202&#176;)</td>
+        <td class="data">9 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">79.7&#176;F</td>
+        <td class="data">79.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">31%</td>
+        <td class="data">30%</td>
       </tr>
     </tbody>
   </table>
@@ -237,14 +237,14 @@
         <td class="data new_row hilo_day">
           <span title="12:39:49 PM">
             50.5</span><br/>
-          <span title="04:06:44 PM">
-            30.9</span>
+          <span title="04:09:14 PM">
+            30.8</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="11:14:17 AM (Monday)">
             52.9</span><br/>
-          <span title="04:06:44 PM (Tuesday)">
-            30.9</span>
+          <span title="04:09:14 PM (Tuesday)">
+            30.8</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 01:24:38 PM">
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="04:07:02 PM">
-            79.7</span><br/>
+          <span title="04:13:02 PM">
+            79.9</span><br/>
           <span title="07:48:01 AM">
             73.3</span>
         </td>
@@ -507,14 +507,14 @@
         <td class="data new_row hilo_day">
           <span title="11:46:01 AM">
             38</span><br/>
-          <span title="03:51:02 PM">
-            31</span>
+          <span title="04:10:02 PM">
+            30</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:53:01 AM (Monday)">
             41</span><br/>
-          <span title="04:12:02 PM (Sunday)">
-            31</span>
+          <span title="04:10:02 PM (Tuesday)">
+            30</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 07:10:02 AM">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">14 days, 1 hour, 22 minutes</td>
+      <td class="data">14 days, 1 hour, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">14 days, 1 hour, 22 minutes</td>
+      <td class="data">14 days, 1 hour, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
