--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/15/2020 04:14:00 PM</p>
+    <p class="lastupdate">09/15/2020 04:19:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">87.8&#176;F</td>
+        <td class="data">87.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">87.8&#176;F</td>
+        <td class="data">87.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">87.8&#176;F</td>
+        <td class="data">87.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">30.8&#176;F</td>
+        <td class="data">32.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">13%</td>
+        <td class="data">14%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.963 inHg (-0.041)</td>
+        <td class="data">29.965 inHg (-0.039)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">9 mph S (180&#176;)</td>
+        <td class="data">9 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">79.9&#176;F</td>
+        <td class="data">80.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -237,14 +237,14 @@
         <td class="data new_row hilo_day">
           <span title="12:39:49 PM">
             50.5</span><br/>
-          <span title="04:09:14 PM">
-            30.8</span>
+          <span title="04:16:38 PM">
+            30.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="11:14:17 AM (Monday)">
             52.9</span><br/>
-          <span title="04:09:14 PM (Tuesday)">
-            30.8</span>
+          <span title="04:16:38 PM (Tuesday)">
+            30.7</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 01:24:38 PM">
@@ -439,7 +439,7 @@
           Average Direction
         </td>
         <td class="data new_row hilo_day">
-          1<br/>
+          2<br/>
           200
         </td>
         <td class="data new_row hilo_week">
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="04:13:02 PM">
-            79.9</span><br/>
+          <span title="04:15:02 PM">
+            80.0</span><br/>
           <span title="07:48:01 AM">
             73.3</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">14 days, 1 hour, 27 minutes</td>
+      <td class="data">14 days, 1 hour, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">14 days, 1 hour, 27 minutes</td>
+      <td class="data">14 days, 1 hour, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
