--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/15/2020 04:19:00 PM</p>
+    <p class="lastupdate">09/15/2020 04:24:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">87.4&#176;F</td>
+        <td class="data">87.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">87.4&#176;F</td>
+        <td class="data">87.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">87.4&#176;F</td>
+        <td class="data">87.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">32.3&#176;F</td>
+        <td class="data">32.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.965 inHg (-0.039)</td>
+        <td class="data">29.968 inHg (-0.031)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">9 mph SSW (202&#176;)</td>
+        <td class="data">6 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">80.0&#176;F</td>
+        <td class="data">80.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="04:15:02 PM">
-            80.0</span><br/>
+          <span title="04:20:02 PM">
+            80.1</span><br/>
           <span title="07:48:01 AM">
             73.3</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">100%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">14 days, 1 hour, 32 minutes</td>
+      <td class="data">14 days, 1 hour, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">14 days, 1 hour, 32 minutes</td>
+      <td class="data">14 days, 1 hour, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
